Thx Java 16!